# ClaudeCodeSkills

./: .gitignore
.github/workflows/: generate-catalog.yml
docs/_data/: skills.json
mcp-servers/android-device/: .gitignore  README.md  pyproject.toml
mcp-servers/android-device/src/android_device_mcp/: __init__.py  config.py  server.py  utils.py
mcp-servers/android-device/src/android_device_mcp/adapters/: __init__.py  adb.py  uiautomator.py
mcp-servers/android-device/src/android_device_mcp/persistence/: __init__.py  learning_store.py
mcp-servers/android-device/src/android_device_mcp/streaming/: __init__.py
mcp-servers/android-device/src/android_device_mcp/tools/: __init__.py  app_management.py  interaction.py  learning.py  observation.py  visual.py
mcp-servers/android-device/tests/: __init__.py  test_adb_adapter.py  test_learning_store.py
